# AdePT

examples/Example18/: electrons.cu  example18.cpp  example18.cu  example18.cuh
examples/Example4/: example4.cu
examples/Example6/: example6.cpp  example6.cu
examples/Example8/: CMakeLists.txt  example8.cpp  example8.cu
examples/field_cu/: CMakeLists.txt  ConstBzFieldStepper.h  fieldPropagator.h  field_step.cu
magneticfield/inc/: ConstFieldHelixStepper.h  fieldPropagatorConstBany.h  fieldPropagatorConstBz.h
physics/processes/inc/: transportation.h
tracking/inc/: ConstFieldHelixStepper.h  transportConstants.h
